remove deprecated method

--- a/Wine_Recommendation.ipynb
+++ b/Wine_Recommendation.ipynb
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 126,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -933,216 +933,18 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\win\\pycharmprojects\\livedwine\\venv\\lib\\site-packages\\ipykernel_launcher.py:2: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
-      "  \n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>87</th>\n",
-       "      <th>88</th>\n",
-       "      <th>89</th>\n",
-       "      <th>90</th>\n",
-       "      <th>91</th>\n",
-       "      <th>92</th>\n",
-       "      <th>93</th>\n",
-       "      <th>94</th>\n",
-       "      <th>95</th>\n",
-       "      <th>96</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.393809</td>\n",
-       "      <td>0.602873</td>\n",
-       "      <td>0.240817</td>\n",
-       "      <td>0.319549</td>\n",
-       "      <td>0.100291</td>\n",
-       "      <td>0.417856</td>\n",
-       "      <td>0.388624</td>\n",
-       "      <td>0.652733</td>\n",
-       "      <td>0.365597</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.307037</td>\n",
-       "      <td>0.307636</td>\n",
-       "      <td>0.512727</td>\n",
-       "      <td>0.652739</td>\n",
-       "      <td>0.395695</td>\n",
-       "      <td>0.232867</td>\n",
-       "      <td>0.475760</td>\n",
-       "      <td>0.539539</td>\n",
-       "      <td>0.515611</td>\n",
-       "      <td>0.322230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.393809</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.503327</td>\n",
-       "      <td>0.389274</td>\n",
-       "      <td>0.175129</td>\n",
-       "      <td>0.097714</td>\n",
-       "      <td>0.624563</td>\n",
-       "      <td>0.593019</td>\n",
-       "      <td>0.505031</td>\n",
-       "      <td>0.667885</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.652638</td>\n",
-       "      <td>0.187334</td>\n",
-       "      <td>0.262267</td>\n",
-       "      <td>0.523514</td>\n",
-       "      <td>0.629040</td>\n",
-       "      <td>0.434863</td>\n",
-       "      <td>0.513204</td>\n",
-       "      <td>0.329891</td>\n",
-       "      <td>0.595397</td>\n",
-       "      <td>0.263166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.602873</td>\n",
-       "      <td>0.503327</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.682066</td>\n",
-       "      <td>0.643109</td>\n",
-       "      <td>0.471834</td>\n",
-       "      <td>0.577847</td>\n",
-       "      <td>0.643506</td>\n",
-       "      <td>0.622206</td>\n",
-       "      <td>0.259510</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.572285</td>\n",
-       "      <td>0.534706</td>\n",
-       "      <td>0.562848</td>\n",
-       "      <td>0.861355</td>\n",
-       "      <td>0.668208</td>\n",
-       "      <td>0.413878</td>\n",
-       "      <td>0.822483</td>\n",
-       "      <td>0.605233</td>\n",
-       "      <td>0.702776</td>\n",
-       "      <td>0.529109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.240817</td>\n",
-       "      <td>0.389274</td>\n",
-       "      <td>0.682066</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.540872</td>\n",
-       "      <td>0.371193</td>\n",
-       "      <td>0.632682</td>\n",
-       "      <td>0.665528</td>\n",
-       "      <td>0.117848</td>\n",
-       "      <td>0.373459</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.519694</td>\n",
-       "      <td>0.298539</td>\n",
-       "      <td>0.333253</td>\n",
-       "      <td>0.426843</td>\n",
-       "      <td>0.606773</td>\n",
-       "      <td>0.777794</td>\n",
-       "      <td>0.478564</td>\n",
-       "      <td>0.377220</td>\n",
-       "      <td>0.487866</td>\n",
-       "      <td>0.759724</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.319549</td>\n",
-       "      <td>0.175129</td>\n",
-       "      <td>0.643109</td>\n",
-       "      <td>0.540872</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.132148</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.293687</td>\n",
-       "      <td>0.322527</td>\n",
-       "      <td>0.152124</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.584725</td>\n",
-       "      <td>0.304017</td>\n",
-       "      <td>0.380021</td>\n",
-       "      <td>0.330396</td>\n",
-       "      <td>0.559368</td>\n",
-       "      <td>0.511394</td>\n",
-       "      <td>0.761215</td>\n",
-       "      <td>0.261155</td>\n",
-       "      <td>0.377441</td>\n",
-       "      <td>0.449561</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 97 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         0         1         2         3         4         5         6   \\\n",
-       "0  0.000000  0.393809  0.602873  0.240817  0.319549  0.100291  0.417856   \n",
-       "1  0.393809  0.000000  0.503327  0.389274  0.175129  0.097714  0.624563   \n",
-       "2  0.602873  0.503327  0.000000  0.682066  0.643109  0.471834  0.577847   \n",
-       "3  0.240817  0.389274  0.682066  0.000000  0.540872  0.371193  0.632682   \n",
-       "4  0.319549  0.175129  0.643109  0.540872  0.000000  0.132148  0.000000   \n",
-       "\n",
-       "         7         8         9   ...        87        88        89        90  \\\n",
-       "0  0.388624  0.652733  0.365597  ...  0.307037  0.307636  0.512727  0.652739   \n",
-       "1  0.593019  0.505031  0.667885  ...  0.652638  0.187334  0.262267  0.523514   \n",
-       "2  0.643506  0.622206  0.259510  ...  0.572285  0.534706  0.562848  0.861355   \n",
-       "3  0.665528  0.117848  0.373459  ...  0.519694  0.298539  0.333253  0.426843   \n",
-       "4  0.293687  0.322527  0.152124  ...  0.584725  0.304017  0.380021  0.330396   \n",
-       "\n",
-       "         91        92        93        94        95        96  \n",
-       "0  0.395695  0.232867  0.475760  0.539539  0.515611  0.322230  \n",
-       "1  0.629040  0.434863  0.513204  0.329891  0.595397  0.263166  \n",
-       "2  0.668208  0.413878  0.822483  0.605233  0.702776  0.529109  \n",
-       "3  0.606773  0.777794  0.478564  0.377220  0.487866  0.759724  \n",
-       "4  0.559368  0.511394  0.761215  0.261155  0.377441  0.449561  \n",
-       "\n",
-       "[5 rows x 97 columns]"
-      ]
+      "text/plain": "         0         1         2         3         4         5         6   \\\n0  0.000000  0.989583  0.989583  0.989583  0.989583  0.989583  0.989583   \n1  0.989583  0.000000  0.989583  0.989583  0.989583  0.989583  0.989583   \n2  0.989583  0.989583  0.000000  0.989583  0.989583  0.989583  0.989583   \n3  0.989583  0.989583  0.989583  0.000000  0.989583  0.989583  0.989583   \n4  0.989583  0.989583  0.989583  0.989583  0.000000  0.989583  0.989583   \n\n         7         8         9   ...        87        88        89        90  \\\n0  0.989583  0.989583  0.989583  ...  0.989583  0.989583  0.989583  0.989583   \n1  0.989583  0.989583  0.989583  ...  0.989583  0.989583  0.989583  0.989583   \n2  0.989583  0.989583  0.989583  ...  0.989583  0.989583  0.989583  0.989583   \n3  0.989583  0.989583  0.989583  ...  0.989583  0.989583  0.989583  0.989583   \n4  0.989583  0.989583  0.989583  ...  0.989583  0.989583  0.989583  0.989583   \n\n         91        92        93        94        95        96  \n0  0.989583  0.989583  0.989583  0.989583  0.989583  0.989583  \n1  0.989583  0.989583  0.989583  0.989583  0.989583  0.989583  \n2  0.989583  0.989583  0.989583  0.989583  0.989583  0.989583  \n3  0.989583  0.989583  0.989583  0.989583  0.989583  0.989583  \n4  0.989583  0.989583  0.989583  0.989583  0.989583  0.989583  \n\n[5 rows x 97 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>9</th>\n      <th>...</th>\n      <th>87</th>\n      <th>88</th>\n      <th>89</th>\n      <th>90</th>\n      <th>91</th>\n      <th>92</th>\n      <th>93</th>\n      <th>94</th>\n      <th>95</th>\n      <th>96</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.000000</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>...</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.989583</td>\n      <td>0.000000</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>...</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.000000</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>...</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.000000</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>...</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.000000</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>...</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n      <td>0.989583</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 97 columns</p>\n</div>"
      },
-     "execution_count": 108,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 126
     }
    ],
    "source": [
     "# Calculate Cosine Similarity\n",
-    "wine_similarity = 1 - pairwise_distances(matrix.as_matrix(), metric = 'cosine')\n",
+    "wine_similarity = 1 - pairwise_distances(matrix.to_numpy(), metric = 'cosine')\n",
     "np.fill_diagonal(wine_similarity, 0)\n",
     "matrix = pd.DataFrame(wine_similarity)\n",
     "matrix.head()\n"
@@ -1150,14 +952,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 123,
    "metadata": {
     "pycharm": {
      "is_executing": false,
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Vinho não localizado.\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "# Recommendation System\n",
     "try:\n",
@@ -1461,10 +1271,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
