changes method to loads dataset using pandas sql query

--- a/Wine_Recommendation_User_Collaborative.ipynb
+++ b/Wine_Recommendation_User_Collaborative.ipynb
@@ -13,162 +13,78 @@
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
-    "import chardet\n",
+    "import pymysql\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import pairwise_distances"
+    "from sklearn.metrics import pairwise_distances\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "def find_encoding(fname):\n",
-    "    r_file = open(fname, 'rb').read()\n",
-    "    result = chardet.detect(r_file)\n",
-    "    charenc = result['encoding']\n",
-    "    return charenc"
+    "# This method takes the database connection.\n",
+    "conn = pymysql.connect(host='localhost', port=int(3306), user='yabaconsultoria', passwd='yaba2389', db=\"livedwine\",\n",
+    "                           charset='utf8')"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'UTF-8-SIG'"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 66
-    }
-   ],
-   "source": [
-    "# Detect the enconde having in wines csv file.\n",
-    "wines_csv_encoding = find_encoding('data/wines.csv')\n",
-    "wines_csv_encoding"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'UTF-8-SIG'"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 67
-    }
-   ],
-   "source": [
-    "# Detect the enconde having in rating csv file.\n",
-    "rating_csv_encoding = find_encoding('data/wines.csv')\n",
-    "rating_csv_encoding"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   wine_id                                          wine_name    type  \\\n0        1               Abadia del Roble White La Mancha D.O  Branco   \n1        2                                Alqueve Branco 2017  Branco   \n2        3  Altivo Vineyard Selection La Rioja Torrontes 2018  Branco   \n3        4  Anciano 35 Years Old Vines Garnacha Calatayud ...   Tinto   \n4        5  Anciano Crianza 3 years Tempranillo Valdepeñas...   Tinto   \n\n     country      region alcohol_content  \\\n0    Espanha   La Mancha            12,0   \n1   Portugal        Tejo            12,0   \n2  Argentina    La Rioja            13,5   \n3    Espanha   Calatayud            15,0   \n4    Espanha  Valdepenãs            12,5   \n\n                                  producer  service  volume        grape  \\\n0                            Bodegas Ayuso       10     750        Airen   \n1                          Pinhal da torre        9     750  Varias uvas   \n2                     Finca Eugenio Bustos        9     750    Torrontes   \n3  Bodegas San Gregorio - Norrel Robertson       12     750     Garnacha   \n4                                  Anciano       12     750  Tempranillo   \n\n  harvest                                      harmonization  \\\n0    None                                     Carnes brancas   \n1    2017  Camarão grelhado, tomates recheados, moqueca, ...   \n2    2018  Salada com frango grelhado, espetinho de camar...   \n3    2016                                               None   \n4    2014                                               None   \n\n                                               image  \n0               Abadia del Roble White La Mancha D.O  \n1                                Alqueve Branco 2017  \n2  Altivo Vineyard Selection La Rioja Torrontes 2018  \n3  Anciano 35 Years Old Vines Garnacha Calatayud ...  \n4  Anciano Crianza 3 years Tempranillo Valdepeñas...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wine_id</th>\n      <th>wine_name</th>\n      <th>type</th>\n      <th>country</th>\n      <th>region</th>\n      <th>alcohol_content</th>\n      <th>producer</th>\n      <th>service</th>\n      <th>volume</th>\n      <th>grape</th>\n      <th>harvest</th>\n      <th>harmonization</th>\n      <th>image</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>Branco</td>\n      <td>Espanha</td>\n      <td>La Mancha</td>\n      <td>12,0</td>\n      <td>Bodegas Ayuso</td>\n      <td>10</td>\n      <td>750</td>\n      <td>Airen</td>\n      <td>None</td>\n      <td>Carnes brancas</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Alqueve Branco 2017</td>\n      <td>Branco</td>\n      <td>Portugal</td>\n      <td>Tejo</td>\n      <td>12,0</td>\n      <td>Pinhal da torre</td>\n      <td>9</td>\n      <td>750</td>\n      <td>Varias uvas</td>\n      <td>2017</td>\n      <td>Camarão grelhado, tomates recheados, moqueca, ...</td>\n      <td>Alqueve Branco 2017</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Altivo Vineyard Selection La Rioja Torrontes 2018</td>\n      <td>Branco</td>\n      <td>Argentina</td>\n      <td>La Rioja</td>\n      <td>13,5</td>\n      <td>Finca Eugenio Bustos</td>\n      <td>9</td>\n      <td>750</td>\n      <td>Torrontes</td>\n      <td>2018</td>\n      <td>Salada com frango grelhado, espetinho de camar...</td>\n      <td>Altivo Vineyard Selection La Rioja Torrontes 2018</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Anciano 35 Years Old Vines Garnacha Calatayud ...</td>\n      <td>Tinto</td>\n      <td>Espanha</td>\n      <td>Calatayud</td>\n      <td>15,0</td>\n      <td>Bodegas San Gregorio - Norrel Robertson</td>\n      <td>12</td>\n      <td>750</td>\n      <td>Garnacha</td>\n      <td>2016</td>\n      <td>None</td>\n      <td>Anciano 35 Years Old Vines Garnacha Calatayud ...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Anciano Crianza 3 years Tempranillo Valdepeñas...</td>\n      <td>Tinto</td>\n      <td>Espanha</td>\n      <td>Valdepenãs</td>\n      <td>12,5</td>\n      <td>Anciano</td>\n      <td>12</td>\n      <td>750</td>\n      <td>Tempranillo</td>\n      <td>2014</td>\n      <td>None</td>\n      <td>Anciano Crianza 3 years Tempranillo Valdepeñas...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 68
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Import wines dataset\n",
-    "wines_col = ['wine_id', 'wine_name', 'type', 'country', 'region', 'alcohol_content', 'producer', 'service', 'volume', 'grape', 'harvest', 'harmonization', 'image']\n",
-    "wines = pd.read_csv('data/wines.csv', sep=';', names=wines_col, encoding=wines_csv_encoding, engine='python')\n",
+    "wines = pd.read_sql_query(\n",
+    "        \"SELECT wine_id, alcohol_content, country, harvest, wine_name, producer, region, service, type, volume, (SELECT GROUP_CONCAT(wine_grape.grape separator ', ') from wine_grape where wine_id = wine.wine_id) as grape, (SELECT GROUP_CONCAT(wine_harmonization.harmonization separator ', ') from wine_harmonization where wine_id = wine.wine_id) as harmonization FROM wine\",\n",
+    "        conn)\n",
     "wines.head()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   user_id  wine_id  rating\n0        1        6       4\n1        1       19       0\n2        1       53       0\n3        1       58       2\n4        1      155       4",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>user_id</th>\n      <th>wine_id</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>6</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>19</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>53</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>58</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>155</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 69
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Import matrix dataset\n",
-    "ratings_col = ['user_id', 'wine_id', 'rating']\n",
-    "ratings = pd.read_csv('data/ratings.csv', sep=';', names=ratings_col, encoding=rating_csv_encoding, engine='python')\n",
+    "ratings = pd.read_sql_query(\"SELECT * FROM rating\", conn)\n",
     "ratings.head()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "   wine_id                             wine_name    type  country     region  \\\n0        1  Abadia del Roble White La Mancha D.O  Branco  Espanha  La Mancha   \n1        1  Abadia del Roble White La Mancha D.O  Branco  Espanha  La Mancha   \n2        1  Abadia del Roble White La Mancha D.O  Branco  Espanha  La Mancha   \n3        1  Abadia del Roble White La Mancha D.O  Branco  Espanha  La Mancha   \n4        1  Abadia del Roble White La Mancha D.O  Branco  Espanha  La Mancha   \n\n  alcohol_content       producer  service  volume  grape harvest  \\\n0            12,0  Bodegas Ayuso       10     750  Airen    None   \n1            12,0  Bodegas Ayuso       10     750  Airen    None   \n2            12,0  Bodegas Ayuso       10     750  Airen    None   \n3            12,0  Bodegas Ayuso       10     750  Airen    None   \n4            12,0  Bodegas Ayuso       10     750  Airen    None   \n\n    harmonization                                 image  user_id  rating  \n0  Carnes brancas  Abadia del Roble White La Mancha D.O       11       2  \n1  Carnes brancas  Abadia del Roble White La Mancha D.O       21       4  \n2  Carnes brancas  Abadia del Roble White La Mancha D.O       59       3  \n3  Carnes brancas  Abadia del Roble White La Mancha D.O      157       4  \n4  Carnes brancas  Abadia del Roble White La Mancha D.O      171       0  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wine_id</th>\n      <th>wine_name</th>\n      <th>type</th>\n      <th>country</th>\n      <th>region</th>\n      <th>alcohol_content</th>\n      <th>producer</th>\n      <th>service</th>\n      <th>volume</th>\n      <th>grape</th>\n      <th>harvest</th>\n      <th>harmonization</th>\n      <th>image</th>\n      <th>user_id</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>Branco</td>\n      <td>Espanha</td>\n      <td>La Mancha</td>\n      <td>12,0</td>\n      <td>Bodegas Ayuso</td>\n      <td>10</td>\n      <td>750</td>\n      <td>Airen</td>\n      <td>None</td>\n      <td>Carnes brancas</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>11</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>Branco</td>\n      <td>Espanha</td>\n      <td>La Mancha</td>\n      <td>12,0</td>\n      <td>Bodegas Ayuso</td>\n      <td>10</td>\n      <td>750</td>\n      <td>Airen</td>\n      <td>None</td>\n      <td>Carnes brancas</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>21</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>Branco</td>\n      <td>Espanha</td>\n      <td>La Mancha</td>\n      <td>12,0</td>\n      <td>Bodegas Ayuso</td>\n      <td>10</td>\n      <td>750</td>\n      <td>Airen</td>\n      <td>None</td>\n      <td>Carnes brancas</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>59</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>Branco</td>\n      <td>Espanha</td>\n      <td>La Mancha</td>\n      <td>12,0</td>\n      <td>Bodegas Ayuso</td>\n      <td>10</td>\n      <td>750</td>\n      <td>Airen</td>\n      <td>None</td>\n      <td>Carnes brancas</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>157</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>Branco</td>\n      <td>Espanha</td>\n      <td>La Mancha</td>\n      <td>12,0</td>\n      <td>Bodegas Ayuso</td>\n      <td>10</td>\n      <td>750</td>\n      <td>Airen</td>\n      <td>None</td>\n      <td>Carnes brancas</td>\n      <td>Abadia del Roble White La Mancha D.O</td>\n      <td>171</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 70
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Merge wine dataset with matrix dataset\n",
+    "conn.close()\n",
     "df = pd.merge(wines, ratings)\n",
     "df.head()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
